# Payload-Software-SL

./: CMakeLists.txt  README.md  cmake_install.cmake  compile_commands.json
Temp Sensor/: Temp sensor
pico-sdk/: Makefile  cmake_install.cmake
pico-sdk/docs/: Makefile  cmake_install.cmake
pico-sdk/src/: Makefile  cmake_install.cmake
pico-sdk/src/common/boot_picobin_headers/: Makefile  cmake_install.cmake
pico-sdk/src/common/boot_picoboot_headers/: Makefile  cmake_install.cmake
pico-sdk/src/common/boot_uf2_headers/: Makefile  cmake_install.cmake
pico-sdk/src/common/hardware_claim/: Makefile  cmake_install.cmake
pico-sdk/src/common/pico_base_headers/: Makefile  cmake_install.cmake
pico-sdk/src/common/pico_binary_info/: Makefile  cmake_install.cmake
pico-sdk/src/common/pico_bit_ops_headers/: Makefile  cmake_install.cmake
pico-sdk/src/common/pico_divider_headers/: Makefile  cmake_install.cmake
pico-sdk/src/common/pico_stdlib_headers/: Makefile  cmake_install.cmake
pico-sdk/src/common/pico_sync/: Makefile  cmake_install.cmake
pico-sdk/src/common/pico_time/: Makefile  cmake_install.cmake
pico-sdk/src/common/pico_usb_reset_interface_headers/: Makefile  cmake_install.cmake
pico-sdk/src/common/pico_util/: Makefile  cmake_install.cmake
pico-sdk/src/rp2040/boot_stage2/: Makefile  bs2_default.dis  bs2_default.elf  bs2_default.elf.map  bs2_default_padded_checksummed.S  cmake_install.cmake
pico-sdk/src/rp2040/hardware_regs/: Makefile  cmake_install.cmake
pico-sdk/src/rp2040/hardware_structs/: Makefile  cmake_install.cmake
pico-sdk/src/rp2040/pico_platform/: Makefile  cmake_install.cmake
pico-sdk/src/rp2_common/boot_bootrom_headers/: Makefile  cmake_install.cmake
pico-sdk/src/rp2_common/cmsis/: Makefile  (+1 more)
pico-sdk/tools/: Makefile  cmake_install.cmake
src/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  sdReader.cpp
(+148 files in other folders)
